[Change] Change privacy to match with new needs to suggest a word and record the username in our database

--- a/privacy.html
+++ b/privacy.html
@@ -29,7 +29,7 @@
 
         <div class="row">
             <h2>Personal information</h2>
-            <p>No personal information will be gathered by the LeitnerBox.</p>
+            <p>The only personal information we will gather currently is your user name if you are a registered user for words tha you suggest to translate. No more personal information will be gathered by the LeitnerBox.</p>
         </div>
 
         <div class="row">
